--- a/src/templates/Layout/header.pug
+++ b/src/templates/Layout/header.pug
@@ -22,11 +22,12 @@ head
     }
 
   include script.pug
+
 body
   #background
   #app
     #aside
-      include ../Partials/logo.pug
+      block aside
 
     #content
       block content
