--- a/src/templates/Views/index.pug
+++ b/src/templates/Views/index.pug
@@ -1,5 +1,9 @@
 extends ../Layout/header.pug
 
+block aside
+  include ../Partials/aside.pug
+  include ../Partials/logo.pug
+
 block content
   main
     p
