--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -77,7 +77,7 @@
 			transition: transform .5s $cubic--one;
 			transform: translate(-100%, -50%) scale(.5);
 			@media (max-width: 992px) { 
-				transform: translate(-50%, -100%) scale(.75);
+				transform: translate(-50%, -25vh) scale(.75);
 			}
 		}
 	}
