--- a/src/styles/layout/_aside.scss
+++ b/src/styles/layout/_aside.scss
@@ -2,3 +2,13 @@
 // ==================
 // 1. Default
 // ==================
+
+#aside {
+	position: fixed;
+	width: 50vw;
+	height: 100vh;
+    overflow: hidden;
+    @media (max-width: 992px) {
+        width: 100vw;
+    }
+}
