--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -24,7 +24,10 @@ h1 {
 	margin-bottom: 2vw;
 	&.-sm {
 		font-size: 5vw;
-		line-height: 4.5vw;
+        line-height: 4.5vw;
+        @media (max-width: 992px) {
+            font-size: 10vw;
+        }
 	}
 }
 
