--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,8 +8,10 @@
 
 @import 'layout/header';
 @import 'layout/aside';
+@import 'layout/sidebar';
 @import 'layout/content';
 @import 'layout/footer';
 
 @import 'components/background';
 @import 'components/menu';
+@import 'components/sidebar';
