--- a/src/templates/Layout/header.pug
+++ b/src/templates/Layout/header.pug
@@ -26,11 +26,16 @@ head
 body
   #background
   #app
+
     #aside
       block aside
 
     #content
       block content
 
+    #sidebar
+
     #menu
       include ../Partials/menu.pug
+    
+    include Sidebar.pug
