--- a/src/templates/Views/index.pug
+++ b/src/templates/Views/index.pug
@@ -4,6 +4,10 @@ block aside
   include ../Partials/aside.pug
   include ../Partials/logo.pug
 
+  a(href="" class="link link__aside")
+    span About us
+    include ../../assets/images/circles.svg
+
 block content
   main
     p
