--- a/src/styles/components/_aside.scss
+++ b/src/styles/components/_aside.scss
@@ -1,23 +1,35 @@
 #studio {
-	position: absolute;
+    position: absolute;
+    margin-top: 0;
 	top: 50%;
 	left: 50%;
-    transform: translate(-50%, -350%);
+    transform: translate(-50%, -250%);
     opacity: 0;
     font-weight: 100;
-    transition: transform .45s $cubic--one,
-                opacity .35s $cubic--one;
+    transition: transform .35s $cubic--one,
+                opacity .35s $cubic--one,
+                color .35s $cubic--one;
     @media (max-width: 992px) {
-        transform: translate(-50%, -550%);
+        transform: translate(-50%, -400%);
     }
 }
 
 .is-loaded {
     #studio {
         opacity: 1;
-        transform: translate(-50%, -375%);
+        transform: translate(-50%, -300%);
         @media (max-width: 992px) {
-            transform: translate(-50%, -600%);
+            transform: translate(-50%, -475%);
+        }
+    }
+}
+
+.is-menu {
+    #studio {
+        color: $white;
+        transform: translate(-50%, -50%) scale(2);
+        @media (max-width: 992px) {
+            transform: translate(-50%, -500%) scale(1.2);
         }
     }
 }
