--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -79,15 +79,15 @@
 	width: 100px;
 	height: 100px;
 	border-radius: 50%;
-	background: $white;
+	// background: $white;
 
 	@media (max-width: 992px) {
 		top: 10px;
 		left: auto;
 		right: 10px;
 		transform: scale(0);
-		height: 65px;
-		width: 65px;
+		height: 45px;
+		width: 45px;
 		background: none;
 	}
 
@@ -101,6 +101,9 @@
 		height: 18px;
 		cursor: pointer;
 		pointer-events: none;
+		@media (max-width: 992px) {
+			width: 21px;
+		}
 
 	}
 
@@ -128,8 +131,8 @@
 	&:before {
 		content: "";
 		position: absolute;
-		width: 100%;
-		height: 100%;
+		width: 99%;
+		height: 99%;
 		border-radius: 50%;
 		background: $white;
 		top: 50%;
@@ -162,10 +165,16 @@
 			
 			&:first-child {
 				transform: translate(-50%, -9px) scale(1, 1);
+				@media (max-width: 992px) {
+					transform: translate(-50%, -8px) scale(1, 1);
+				}
 			}
 
 			&:last-child {
 				transform: translate(-50%, 5px) scale(1, 1);
+				@media (max-width: 992px) {
+					transform: translate(-50%, 4px) scale(1, 1);
+				}
 			}
 
 		}
