--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -38,7 +38,7 @@
 		.seven {
             fill: rgba($white, .1);
             @media (max-width: 992px) {
-                fill: $orange;
+                fill: $white;
             }
 		}
     }
