--- a/src/styles/Views/Index.scss
+++ b/src/styles/Views/Index.scss
@@ -1,4 +1,9 @@
 @import '../utils/vars';
 
+@import '../pages/homepage';
+
 @import '../components/aside';
 @import '../components/logo';
+@import '../components/services';
+@import '../components/works';
+@import '../components/gallery';
