--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,6 +13,7 @@
 @import 'layout/footer';
 
 @import 'components/background';
+@import 'components/buttons';
 @import 'components/menu';
 @import 'components/links';
 @import 'components/sidebar';
