--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -55,8 +55,8 @@
             text-decoration: none;
 		}
 		div {
-			width: 3.5vw;
-			height: 3.5vw;
+			width: 65px;
+			height: 65px;
 			background: $black;
 			margin: 0 auto 10px;
             transition: transform .1s $cubic--one;
