--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -124,7 +124,7 @@ input[type="submit"] {
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background: $orange;
+		background: $white;
 		top: 0;
 		transition: transform .2s $cubic--one;
 	}
@@ -137,8 +137,19 @@ input[type="submit"] {
 		width: 30%;
 	}
 
-	polygon {
-		fill: $white;
+	polyline,
+	line {
+		fill: none;
+		stroke: $white;
+		stroke-width: 2px;
+		transition: stroke .1s $cubic--one;
+	}
+
+	&:hover {
+		polyline,
+		line {
+			stroke: $black;
+		}
 	}
 }
 
@@ -156,7 +167,7 @@ input[type="submit"] {
 
 	&:hover {
 		&:before {
-			transform: translate(-100%) scale(2) rotate(45deg);
+			transform: translate(-100%);
 		}
 	}
 }
@@ -169,7 +180,7 @@ input[type="submit"] {
 
 	&:hover {
 		&:before {
-			transform: translate(100%) scale(2) rotate(-45deg);
+			transform: translate(100%);
 		}
 	}
 
