--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -9,49 +9,112 @@
 		margin: 0;
 	}
 
-	ul {
+	// ul {
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	overflow: hidden;
+	// 	list-style: none;
+	// 	margin: 0;
+	// 	padding: 0;
+	// }
+
+	&__list {
 		width: 100%;
 		height: 100%;
 		overflow: hidden;
-		list-style: none;
+		box-shadow: 2vw 2vw 2vw rgba($black, .45);
+	}
+
+	ul {
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 		margin: 0;
 		padding: 0;
+		position: absolute;
+		overflow: hidden;
 	}
 
-	&__list {
-		background: red;
-	}
-
-	&__item {
+	li {
 		overflow: hidden;
 		position: absolute;
 		top: 0;
 		width: 100%;
 		height: 100%;
-        box-shadow: 2vw 2vw 2vw rgba($black, .45);
-        
-        ._img {
-            width: 100%;
-            height: 100%;
-            background: red;
-        }
+	}
 
-		img {
-			max-width: none;
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			pointer-events: none;
-		}
-
-		div {
-			color: $white;
-			position: absolute;
-			top: 0;
-			left: 0;
-			padding: 5vw 4vw;
+	.gallery__images {
+		li {
+			background-size: cover;
 		}
 	}
+
+	.gallery__content {
+		li {
+			color: $white;
+			padding: 5vw 4vw;
+			
+			.link-arrow {
+				margin-top: 40px;
+				display: inline-block;
+			}
+
+			.link-circle {
+				width: 65px;
+				height: 65px;
+			}
+			
+			._img {
+				width: 100%;
+				height: 100%;
+				background: red;
+			}
+
+			img {
+				max-width: none;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				pointer-events: none;
+			}
+		}
+	}
+
+	// &__item {
+	// 	overflow: hidden;
+	// 	position: absolute;
+	// 	top: 0;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	box-shadow: 2vw 2vw 2vw rgba($black, .45);
+		
+	// 	.link-arrow {
+	// 		margin-top: 20px;
+	// 	}
+        
+    //     ._img {
+    //         width: 100%;
+    //         height: 100%;
+    //         background: red;
+    //     }
+
+	// 	img {
+	// 		max-width: none;
+	// 		width: 100%;
+	// 		height: 100%;
+	// 		object-fit: cover;
+	// 		pointer-events: none;
+	// 	}
+
+	// 	& > div {
+	// 		color: $white;
+	// 		position: absolute;
+	// 		top: 0;
+	// 		left: 0;
+	// 		padding: 5vw 4vw;
+	// 	}
+	// }
 
 	&__nav {
 		position: absolute;
@@ -73,21 +136,33 @@
 		white-space: nowrap;
 		transform: rotate(-90deg) translate(0, -100%);
 		transform-origin: top left;
+		text-decoration: none;
 		span {
-			&:first-child {
-				color: $grey;
-				font-family: $font-bold;
-			}
+			color: $grey;
+			font-family: $font-bold;
+			display: inline-block;
 		}
 
 		svg {
 			margin-left: 10px;
 			width: 18px;
+			transition: transform .1s $cubic--one;
 		}
 
-		polygon {
-			fill: $orange;
+		polyline,
+		line {
+			fill: none;
+			stroke-width: 2px;
+			stroke: $orange;
+		}
+
+		&:hover {
+			svg {
+				transform: translate(5px);
+			}
 		}
 	}
+
+	
 
 }
