--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -2,21 +2,12 @@
 	
 	position: relative;
 	margin-left: 6vw;
-	width: calc(100% + 7vw);
+	width: calc(100% + 1vw);
 	height: 75%;
 
 	h4 {
 		margin: 0;
 	}
-
-	// ul {
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	overflow: hidden;
-	// 	list-style: none;
-	// 	margin: 0;
-	// 	padding: 0;
-	// }
 
 	&__list {
 		width: 100%;
@@ -46,7 +37,19 @@
 
 	.gallery__images {
 		li {
-			background-size: cover;
+			picture {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+			}
+			img {
+				object-fit: cover;
+				width: 100%;
+				height: 100%;
+			}
 		}
 	}
 
