--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -37,6 +37,8 @@
 
 	.gallery__images {
 		li {
+			// transition: transform .5s $cubic--one;
+
 			picture {
 				position: absolute;
 				top: 0;
@@ -45,6 +47,7 @@
 				height: 100%;
 				overflow: hidden;
 			}
+			
 			img {
 				object-fit: cover;
 				width: 100%;
@@ -55,6 +58,7 @@
 
 	.gallery__content {
 		li {
+			display: none;
 			color: $white;
 			padding: 5vw 4vw;
 			
@@ -80,6 +84,10 @@
 				height: 100%;
 				object-fit: cover;
 				pointer-events: none;
+			}
+
+			&.is-active {
+				display: block;
 			}
 		}
 	}
