--- a/src/templates/Partials/gallery.pug
+++ b/src/templates/Partials/gallery.pug
@@ -1,6 +1,6 @@
 .gallery
 	.gallery__list
-		ul.gallery__images
+		ul.gallery__images.gallery__slider
 			li
 				<picture>
 					source(srcset="/assets/placeholder.jpg" media="(min-width: 992px)")
@@ -8,7 +8,12 @@
 				</picture>
 			li
 				<picture>
-					source(srcset="/assets/placeholder.jpg" media="(min-width: 992px)")
+					source(srcset="/assets/placeholder2.jpg" media="(min-width: 992px)")
+					img(src="/assets/placeholder.jpg")
+				</picture>
+			li
+				<picture>
+					source(srcset="/assets/placeholder3.jpg" media="(min-width: 992px)")
 					img(src="/assets/placeholder.jpg")
 				</picture>
 		ul.gallery__content
@@ -20,7 +25,14 @@
 						include ../../assets/images/circles.svg
 						include ../../assets/images/arrow.svg
 			li
-				h4 BHF
+				h4 BHF@2
+				p Small description here
+				a(href="" class="link-arrow -white")
+					._icon
+						include ../../assets/images/circles.svg
+						include ../../assets/images/arrow.svg
+			li
+				h4 BHF@3
 				p Small description here
 				a(href="" class="link-arrow -white")
 					._icon
