Text to span -- gallery

--- a/src/templates/Partials/gallery.pug
+++ b/src/templates/Partials/gallery.pug
@@ -9,12 +9,12 @@
 			li
 				<picture>
 					source(srcset="/assets/placeholder2.jpg" media="(min-width: 992px)")
-					img(src="/assets/placeholder.jpg")
+					img(src="/assets/placeholder2.jpg")
 				</picture>
 			li
 				<picture>
 					source(srcset="/assets/placeholder3.jpg" media="(min-width: 992px)")
-					img(src="/assets/placeholder.jpg")
+					img(src="/assets/placeholder3.jpg")
 				</picture>
 		ul.gallery__content
 			li
@@ -25,7 +25,7 @@
 						include ../../assets/images/circles.svg
 						include ../../assets/images/arrow.svg
 			li
-				h4 BHF@2
+				h4 BHF @2
 				p Small description here
 				a(href="" class="link-arrow -white")
 					._icon
