--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -10,6 +10,7 @@
 	}
 
 	&__list {
+		background: $white;
 		width: 100%;
 		height: 100%;
 		overflow: hidden;
@@ -37,12 +38,16 @@
 
 	.gallery__images {
 		li {
-			// transition: transform .5s $cubic--one;
+			transition: transform .35s $cubic--one,
+						opacity .35s $cubic--one;
+			opacity: 0;
+			transform: scale(1.1);
 
 			picture {
 				position: absolute;
-				top: 0;
-				left: 0;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
 				width: 100%;
 				height: 100%;
 				overflow: hidden;
@@ -52,6 +57,11 @@
 				object-fit: cover;
 				width: 100%;
 				height: 100%;
+			}
+
+			&.is-active {
+				opacity: 1;
+				transform: scale(1);
 			}
 		}
 	}
@@ -84,6 +94,23 @@
 				height: 100%;
 				object-fit: cover;
 				pointer-events: none;
+			}
+
+			h4,
+			h4 div,
+			h4 span {
+				display: inline-block
+			}
+
+			h4 div {
+				overflow: hidden;
+			}
+
+			h4 span {
+				transform: translate(0, -100%);
+				&.is-active {
+					transform: translate(0);
+				}
 			}
 
 			&.is-active {
